# archon-cli

./: .gitattributes  .gitignore  ARCHON.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  config.toml  insta.yaml
crates/archon-bench/: Cargo.toml  README.md  threshold.toml
crates/archon-bench/benches/: discovery_scan.rs  fanout_100.rs  task_submit.rs
crates/archon-bench/src/: lib.rs  p95.rs  thresholds.rs
crates/archon-cognitive/: Cargo.toml
crates/archon-cognitive/src/: candidate_planner.rs  candidate_store.rs  cognitive_tick.rs  cognitive_tick_store.rs  config.rs  cozo_guard.rs  decision_codec.rs  decision_store.rs  executive_loop.rs  executive_support.rs  governed_apply_store.rs  governed_autonomous_apply.rs  inspection.rs  lib.rs  policy_gate.rs  reflection_store.rs  reflection_writer.rs  schema.rs  situation_classifier.rs  store.rs  tool_use_gate.rs  types.rs  verification_contracts.rs  world_model_scoring.rs
crates/archon-cognitive/tests/: candidate_planner_tests.rs  cognitive_tick_tests.rs  config_tests.rs  daemon_tests.rs  decision_store_tests.rs  executive_loop_tests.rs  git_probe_suppression_test.rs  governed_autonomous_apply_tests.rs  inspection_tests.rs  integration_tests.rs  policy_gate_tests.rs  reflection_writer_tests.rs  rq_preflight_tests.rs  schema_tests.rs  self_model_store_tests.rs  situation_classifier_tests.rs  store_tests.rs  tool_use_gate_tests.rs  verification_contracts_tests.rs  world_model_scoring_tests.rs
crates/archon-completion/: Cargo.toml
crates/archon-completion/src/: claim_extractor.rs  errors.rs  evidence_resolver.rs  incident_recorder.rs  lib.rs  models.rs  report_assembler.rs  schema.rs  store.rs  trust.rs  verification_gates.rs
crates/archon-consciousness/: Cargo.toml
crates/archon-consciousness/src/: assembler.rs  corrections.rs  defaults.rs  inner_voice.rs  lib.rs  persistence.rs  personality.rs  rules.rs
crates/archon-consciousness/tests/: inner_voice_tests.rs  persistence_tests.rs
crates/archon-constellation/: Cargo.toml
crates/archon-constellation/src/: bootstrap.rs  centroid_builder.rs  drift_detector.rs  errors.rs  lib.rs  schema.rs  score.rs  store.rs
crates/archon-constellation/tests/: constellation_engine.rs
crates/archon-core/: Cargo.toml
crates/archon-core/src/: agent.rs  archonmd.rs  auto_extraction.rs  background_agents.rs  claudemd.rs  cli_flags.rs  commands.rs  config.rs  config_diff.rs  config_layers.rs  config_source.rs  config_watcher.rs  cost.rs  cost_alerts.rs  dispatch.rs  env_vars.rs  git.rs  headless.rs  input_format.rs  lib.rs  logging.rs  metrics.rs  orchestrator.rs  output_format.rs  output_style.rs  output_style_loader.rs  plan_explore.rs  plan_file.rs  plan_v2.rs  print_mode.rs  reasoning.rs  sandbox.rs  schema_validation.rs  subagent.rs  subagent_executor.rs  update.rs
crates/archon-core/tests/: agent_memory_smoke_test.rs  agent_prompt_tool_declarations.rs  archon_pack_integration.rs  archonmd_tests.rs  baseline_inventory_superset.rs  build_subagent_tools_async.rs  claudemd_tests.rs  cli_flags_tests.rs  codex_provider_config.rs  codex_subagent_provider_parity.rs  config_default_tests.rs  config_layers_tests.rs  config_tests.rs  config_watcher_tests.rs  discovery_local.rs  discovery_remote.rs  dispatch_registry_tests.rs  engineering_pack_integration.rs  env_vars_tests.rs  expanded_skills_tests.rs  hook_agent_tests.rs  hook_callback_tests.rs  hook_context_tests.rs  hook_elicitation_tests.rs  hook_function_tests.rs  hook_http_tests.rs  hook_lifecycle_tests.rs  hook_permissions_tests.rs  hook_phase2_integration.rs  hook_phase3_integration.rs  hook_prompt_tests.rs  hook_session_tests.rs  hook_timeout_budget_tests.rs  hook_toml_tests.rs  hook_watch_tests.rs  hooks_persistence_gate.rs  hooks_tests.rs  logging_tests.rs  no_blocking_lock_in_async.rs  orchestrator_tests.rs  (+32 more)
crates/archon-docs/: Cargo.toml
crates/archon-docs/src/: answer.rs  answer_timecode.rs  chunking.rs  cozo_retry.rs  embed.rs  embed_config.rs  embed_fastembed.rs  embed_openai.rs  errors.rs  hash.rs  index_jobs.rs  index_queue.rs  index_queue_tests.rs  indexing.rs  indexing_adaptive.rs  indexing_cache.rs  indexing_options.rs  indexing_parallel.rs  indexing_progress.rs  indexing_result.rs  indexing_store.rs  ingest.rs  ingest_artifacts.rs  ingest_bytes.rs  ingest_directory.rs  ingest_embedding_tests.rs  ingest_multimodal.rs  ingest_multimodal_tests.rs  ingest_pdf.rs  ingest_pdf_ingest_tests.rs  ingest_test_support.rs  ingest_tests.rs  ingest_text.rs  inspect.rs  lib.rs  models.rs  pdf.rs  pdf_image_enrichment.rs  pdf_image_progress.rs  pdf_image_vlm.rs  (+15 more)
crates/archon-knowledge/: Cargo.toml
crates/archon-knowledge/src/: claim_extractor.rs  contradiction_scanner.rs  entity_extractor.rs  errors.rs  hybrid_retriever.rs  lib.rs  relation_inferer.rs  schema.rs  source_quality.rs  store.rs
crates/archon-knowledge/tests/: knowledge_engine.rs
crates/archon-leann/: Cargo.toml
crates/archon-leann/src/: chunker.rs  indexer.rs  language.rs  lib.rs  metadata.rs  queue.rs  search.rs  stats.rs
crates/archon-leann/tests/: chunker.rs  crate_structure.rs  indexer.rs  leann_api.rs  queue_tests.rs  search_tests.rs
crates/archon-learning/: Cargo.toml
crates/archon-learning/src/: agent_evolution_ledger.rs  agent_evolution_proposals.rs  agent_knowledge_digest.rs  agent_profile_versions.rs  (+24 more)
crates/archon-llm/: Cargo.toml
crates/archon-mcp/: Cargo.toml
crates/archon-meaning/: Cargo.toml
crates/archon-memory/: Cargo.toml
crates/archon-observability/: Cargo.toml
crates/archon-pipeline/: Cargo.toml
crates/archon-plugin/: Cargo.toml
crates/archon-provenance/: Cargo.toml
crates/archon-reasoning-quality/: Cargo.toml
crates/archon-sdk/: Cargo.toml
crates/archon-session/: Cargo.toml
crates/archon-test-support/: Cargo.toml  README.md
crates/archon-tools/: Cargo.toml
crates/archon-trading/: Cargo.toml
crates/archon-tui/: Cargo.toml
crates/archon-tui-test-support/: Cargo.toml
crates/archon-video/: Cargo.toml
crates/archon-workflow/: Cargo.toml
crates/archon-world-model/: Cargo.toml
(+2781 files in other folders)
