[package]
name = "archon-cli-workspace"
version.workspace = true
edition.workspace = true
publish = false

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ste-bah/archon-cli"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
base64 = "0.22"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
oauth2 = "5"
fd-lock = "4"
open = "5"
tiny_http = "0.12"
cozo = { package = "cozo-ce", version = "0.7.13-alpha.3", default-features = false, features = ["storage-sqlite", "storage-sqlite-src", "rayon"] }
ratatui = "0.29"
crossterm = "0.28"
toml = "0.8"
glob = "0.3"
grep-regex = "0.1"
regex = "1"
jsonschema = "0.28"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
getrandom = { version = "0.3", features = ["std"] }
urlencoding = "2"
which = "7"
tempfile = "3"
notify = "7"
pulldown-cmark = "0.12"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
petgraph = "0.8"
libloading = "0.8"
git2 = "0.19"
openssl = { version = "0.10", features = ["vendored"] }
cron = "0.12"
rand = "0.9"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
async-lsp = { version = "0.2", features = ["omni-trait"] }
lsp-types = "0.95"
tokio-util = { version = "0.7", features = ["compat", "io"] }
tokio-stream = "0.1"
tower = "0.5"
wasmtime = "28"
wat = "1"
aws-sigv4 = { version = "1", features = ["sign-http"] }
aws-credential-types = "1"
jsonwebtoken = "9"
hmac = "0.12"
semver = "1"
russh = "0.60"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
cpal = "0.15"
hound = "3"
rust-embed = "8"

[[bin]]
name = "archon"
path = "src/main.rs"

[dependencies]
archon-core = { path = "crates/archon-core" }
archon-consciousness = { path = "crates/archon-consciousness" }
archon-llm = { path = "crates/archon-llm" }
archon-mcp = { path = "crates/archon-mcp" }
archon-memory = { path = "crates/archon-memory" }
archon-permissions = { path = "crates/archon-permissions" }
archon-plugin = { path = "crates/archon-plugin" }
archon-sdk = { path = "crates/archon-sdk" }
archon-session = { path = "crates/archon-session" }
archon-pipeline = { path = "crates/archon-pipeline" }
archon-leann = { path = "crates/archon-leann" }
archon-tools = { path = "crates/archon-tools" }
archon-tui = { path = "crates/archon-tui" }
reqwest.workspace = true
openssl.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

# Keep linker memory + disk usage bounded on CI. The workspace has a
# massive native dep tree (tree-sitter, ort, russh, libgit2, aws-lc-sys,
# onnxruntime, wasmtime, …) and rust-lld SIGBUSes on Ubuntu CI when
# parallelFor'ing DWARF from every rlib, even at line-tables-only. The
# fix: strip debuginfo from ALL third-party deps. Our own crates keep
# line-tables-only so backtraces still resolve to archon-* source.
[profile.test]
debug = "line-tables-only"

[profile.test.package."*"]
debug = 0

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = 0
