[package]
name = "archon-bench"
version.workspace = true
edition.workspace = true
publish = false
description = "Criterion bench harness for archon-cli NFR-PERF gates. Bodies populated by phase-1..3 tasks."

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
hdrhistogram.workspace = true
toml = "0.8"

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tempfile.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
archon-core = { path = "../archon-core" }
archon-pipeline = { path = "../archon-pipeline" }

[[bench]]
name = "task_submit"
path = "benches/task_submit.rs"
harness = false

[[bench]]
name = "discovery_scan"
path = "benches/discovery_scan.rs"
harness = false

[[bench]]
name = "fanout_100"
path = "benches/fanout_100.rs"
harness = false
