[package]
name = "archon-cognitive"
version.workspace = true
edition.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
cozo.workspace = true
archon-reasoning-quality = { path = "../archon-reasoning-quality" }
archon-policy = { path = "../archon-policy" }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
