[package]
name = "archon-completion"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
cozo.workspace = true
regex.workspace = true
archon-provenance = { path = "../archon-provenance" }
archon-learning = { path = "../archon-learning" }

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
