[package]
name = "archon-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal dependencies
archon-llm = { path = "../archon-llm" }
archon-tools = { path = "../archon-tools" }
archon-permissions = { path = "../archon-permissions" }
archon-context = { path = "../archon-context" }
archon-session = { path = "../archon-session" }
archon-consciousness = { path = "../archon-consciousness" }
archon-memory = { path = "../archon-memory" }
archon-mcp = { path = "../archon-mcp" }

# Workspace dependencies
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
uuid.workspace = true
chrono.workspace = true
notify.workspace = true
reqwest.workspace = true
sha2.workspace = true
semver.workspace = true
hex.workspace = true
async-trait.workspace = true
# TASK-AGS-101: BackgroundAgentRegistry scaffold (REQ-FOR-D2 [1/5]).
# dashmap = sharded concurrent map for the registry inner storage.
# once_cell = global Lazy<Arc<dyn BackgroundAgentRegistryApi>>.
# tokio-util = CancellationToken for per-subagent cancellation propagation.
dashmap.workspace = true
once_cell.workspace = true
tokio-util.workspace = true
russh.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true
rand.workspace = true
petgraph.workspace = true

jsonschema.workspace = true

[dev-dependencies]
uuid.workspace = true
tempfile.workspace = true
toml.workspace = true
# TASK-AGS-009: PRESERVE-D5 regression guard uses serial_test to
# serialise the ARCHON_AUTO_BACKGROUND_TASKS env var flip test.
serial_test.workspace = true
# TASK-AGS-014: insta + archon-test-support drive the TUI frame
# snapshot baseline test (crates/archon-core/tests/tui_frame_baseline.rs).
# Both are dev-only — neither leaks into the production graph.
insta.workspace = true
archon-test-support = { path = "../archon-test-support" }
