[package]
name = "archon-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal dependencies
archon-llm = { path = "../archon-llm" }
archon-tools = { path = "../archon-tools" }
archon-permissions = { path = "../archon-permissions" }
archon-context = { path = "../archon-context" }
archon-session = { path = "../archon-session" }
archon-consciousness = { path = "../archon-consciousness" }
archon-memory = { path = "../archon-memory" }
archon-mcp = { path = "../archon-mcp" }
# TASK-AGS-OBS-901: `src/metrics.rs` now re-exports `ChannelMetricSink` from
# archon-observability (trait was moved there in OBS-901 so the trait + type
# + impl all live in one crate — orphan-rule constraint). No cycle:
# archon-observability has zero archon-* deps.
archon-observability = { path = "../archon-observability" }

# Workspace dependencies
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
uuid.workspace = true
chrono.workspace = true
notify.workspace = true
reqwest.workspace = true
sha2.workspace = true
semver.workspace = true
hex.workspace = true
async-trait.workspace = true
# TASK-AGS-101: tokio-util used for CancellationToken wiring that
# crosses archon-core boundaries. (dashmap + once_cell were moved to
# archon-tools in TASK-AGS-104 along with the background_agents module.)
tokio-util.workspace = true
dashmap.workspace = true
tokio-stream.workspace = true
russh.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true
rand.workspace = true
petgraph.workspace = true
wasmtime.workspace = true
inventory.workspace = true

jsonschema.workspace = true
sqlite.workspace = true
crc32fast.workspace = true
sysinfo.workspace = true

# Phase 3: Agent discovery system (TASK-AGS-300..307)
arc-swap.workspace = true
walkdir.workspace = true
moka.workspace = true
strsim.workspace = true
globset.workspace = true
rayon.workspace = true
serde_yml.workspace = true

[dev-dependencies]
# TASK-AGS-506: test-util feature needed for tokio::time::pause/advance in
# circuit_breaker tests. This only affects test builds.
tokio = { workspace = true, features = ["test-util"] }
uuid.workspace = true
tempfile.workspace = true
toml.workspace = true
# TASK-AGS-009: PRESERVE-D5 regression guard uses serial_test to
# serialise the ARCHON_AUTO_BACKGROUND_TASKS env var flip test.
serial_test.workspace = true
# TASK-AGS-014: insta + archon-test-support drive the TUI frame
# snapshot baseline test (crates/archon-core/tests/tui_frame_baseline.rs).
# Both are dev-only — neither leaks into the production graph.
insta.workspace = true
archon-test-support = { path = "../archon-test-support" }
# Phase 3: wiremock for remote discovery integration tests (TASK-AGS-304)
wiremock.workspace = true
wat.workspace = true
tracing-test.workspace = true
