[package]
name = "archon-docs"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
cozo.workspace = true
tokio.workspace = true
walkdir = "2"
fastembed.workspace = true
ndarray.workspace = true
dirs.workspace = true
archon-provenance = { path = "../archon-provenance" }

[dev-dependencies]
tempfile = "3"
