[package]
name = "archon-docs"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
uuid = { workspace = true, features = ["v4"] }
sha2.workspace = true
blake3.workspace = true
hex.workspace = true
chrono.workspace = true
cozo.workspace = true
tokio.workspace = true
walkdir = "2"
fastembed.workspace = true
ndarray.workspace = true
dirs.workspace = true
hnsw_rs.workspace = true
rust-rocksdb.workspace = true
archon-policy = { path = "../archon-policy" }
archon-provenance = { path = "../archon-provenance" }
archon-llm = { path = "../archon-llm" }
archon-cozo = { path = "../archon-cozo" }
tempfile.workspace = true

[dev-dependencies]
serial_test.workspace = true
wiremock.workspace = true
