[package]
name = "archon-leann"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
libloading = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
cozo = { workspace = true }
archon-memory = { path = "../archon-memory" }
chrono = { workspace = true }
tracing = { workspace = true }
ndarray = "0.16"

[dependencies.walkdir]
version = "2"

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
cozo = { workspace = true }
ndarray = "0.16"
