[package]
name = "archon-learning"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cozo.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
