[package]
name = "archon-learning"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
archon-policy = { path = "../archon-policy" }
archon-cozo = { path = "../archon-cozo" }
cozo.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
json-patch = "4.2"

[dev-dependencies]
tempfile.workspace = true
