[package]
name = "archon-llm"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
getrandom.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
oauth2.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
fd-lock.workspace = true
open.workspace = true
tiny_http.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true
which.workspace = true
futures-util.workspace = true
aws-sigv4 = { version = "1", features = ["sign-http"] }
aws-credential-types.workspace = true
jsonwebtoken.workspace = true
hmac.workspace = true
# TASK-AGS-700: descriptor `base_url: Url` + serde round-trip support.
url = { version = "2", features = ["serde"] }
# TASK-AGS-701: ApiKey wraps SecretString to enforce NFR-SECURITY-001.
# thiserror/reqwest already satisfied via workspace (v2 / v0.12) — spec's
# "thiserror=1" and "reqwest=0.11" versions are stale, workspace wins.
secrecy = "0.8"

[dev-dependencies]
async-trait.workspace = true
uuid.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
