[package]
name = "archon-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
archon-tools = { path = "../archon-tools" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true
rmcp = { version = "1.3", features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
http = "1"

[dev-dependencies]
tempfile = "3"
