[package]
name = "archon-memory"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
cozo.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true
tokio.workspace = true
fd-lock.workspace = true
fastembed.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
ndarray = "0.16"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
