[package]
name = "archon-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
cozo.workspace = true
archon-memory = { path = "../archon-memory" }
archon-leann = { path = "../archon-leann" }
archon-llm = { path = "../archon-llm" }

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
cozo.workspace = true
