[package]
name = "archon-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
regex.workspace = true
serde_yml.workspace = true
glob.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
cozo.workspace = true
archon-memory = { path = "../archon-memory" }
archon-leann = { path = "../archon-leann" }
archon-llm = { path = "../archon-llm" }
archon-core = { path = "../archon-core" }
cel-interpreter.workspace = true
petgraph.workspace = true
thiserror.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
cozo.workspace = true
async-trait.workspace = true
futures-util.workspace = true
chrono.workspace = true
