[package]
name = "archon-provenance"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
cozo.workspace = true

[dev-dependencies]
tempfile.workspace = true
