[package]
name = "archon-reasoning-quality"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
cozo.workspace = true
hex.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
