[package]
name = "archon-test-support"
version.workspace = true
edition.workspace = true
publish = false
description = "Test-only doubles and helpers for archon-cli. Never pulled into the production graph."

[dependencies]
wiremock.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
anyhow.workspace = true
tempfile.workspace = true
